[package]
name = "nu_plugin_geospatial"
version = "0.1.0"
edition = "2024"

[dependencies]
geo = { version = "0.31.0", features = ["serde"] }
geo-traits = "0.3.0"
geojson = "0.24.2"
nu-plugin = "0.107.0"
nu-protocol = { version = "0.107.0", features = ["plugin"] }
serde = { version = "1.0.219", features = ["derive"] }
typetag = "0.2.20"
wkb = "0.9.0"
wkt = "0.14.0"

[dev-dependencies]
nu-cmd-lang = "0.107.0"
nu-plugin-test-support = "0.107.0"
